--- a/app/globals.css
+++ b/app/globals.css
@@ -26,8 +26,32 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+@layer base {
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #6a5bcd; /* Scrollbar thumb color */
+    border-radius: 10px;
+    border: 3px solid #f1f1f1; /* Padding around the thumb */
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #4a0080; /* Color when hovered */
+    border-radius: 10px;
+  }
+}
+
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
+
